--- a/CoastAdmin-SPA/src/app/app.component.html
+++ b/CoastAdmin-SPA/src/app/app.component.html
@@ -7,10 +7,10 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<div>
-  <h1>{{ title }} app is running!</h1>
-  <app-value></app-value>
-</div>
+<app-nav></app-nav>
+<h1>{{ title }} app is running!</h1>
+<app-value></app-value>
+
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
