End of Section 5

--- a/CoastAdmin-SPA/src/app/home/home.component.html
+++ b/CoastAdmin-SPA/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-5">
   
   <div *ngIf="!registerMode" style="text-align: center">
-    <h1>Svitzer OverTime</h1>
-    <p class="lead">New user? Register to view available shifts...</p>
+    <h1>Svitzer COAST</h1>
+    <p class="lead">New user? Register to view roster...</p>
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2"(click)="registerToggle()">Register</button>
       <button class="btn btn-info btn-lg">Learn more</button>
