--- a/CoastAdmin-SPA/src/app/nav/nav.component.html
+++ b/CoastAdmin-SPA/src/app/nav/nav.component.html
@@ -3,10 +3,13 @@
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Certificates</a>
+        <a class="nav-link" href="#">Roster</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Overtime</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Construct</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" (click)="logout()">Logout</a>
