--- a/CoastAdmin-SPA/src/app/nav/nav.component.html
+++ b/CoastAdmin-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">COAST</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
 
-    <ul class="navbar-nav mr-auto">
+    <a class="navbar-brand" href="#">COAST</a>
+
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Roster</a>
       </li>
@@ -11,20 +13,17 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Construct</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Logout</a>
-      </li>
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome User
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
     
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" href="#">Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
 
@@ -35,8 +34,9 @@
       placeholder="Password" required [(ngModel)]="model.password">
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
-
+  </div>
 </nav>
+
 
 
 
